Latest build deployed.

--- a/ethics-generational-wealth.html
+++ b/ethics-generational-wealth.html
@@ -495,7 +495,7 @@ eBookConfig.enable_chatcodes =  false;
 </div>
 <div class="displaymath process-math">
 \begin{equation*}
-\left(\prod_{k=1}^12 (1 + \iota_k)\right)^(1/12) = (1 + \iota_m)
+\left(\prod_{k=1}^{12} (1 + \iota_k)\right)^{1/12} = (1 + \iota_m)
 \end{equation*}
 </div>
 <div class="autopermalink" data-description="Task 2.15.1.c"><a href="#ethics-generational-wealth-5-4" title="Copy heading and permalink for Task 2.15.1.c" aria-label="Copy heading and permalink for Task 2.15.1.c">🔗</a></div></article><div class="autopermalink" data-description="Activity 2.15.1"><a href="#ethics-generational-wealth-5" title="Copy heading and permalink for Activity 2.15.1" aria-label="Copy heading and permalink for Activity 2.15.1">🔗</a></div></article><div class="para" id="ethics-generational-wealth-6">Let’s look at how the value of a home increases over generations. This is an example of a force of interest problem, since the rate is fluctuating constantly.  However, since we have data values instead of a function, we will do the calculation using numerical methods in a program like Excel or in a programming language like Python.<div class="autopermalink" data-description="Paragraph"><a href="#ethics-generational-wealth-6" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
