Latest build deployed.

--- a/ethics-redlining.html
+++ b/ethics-redlining.html
@@ -419,7 +419,8 @@ eBookConfig.enable_chatcodes =  false;
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="ethics-redlining"><h2 class="heading hide-type">
 <span class="type">Section</span><span class="space"> </span><span class="codenumber">6.9</span><span class="space"> </span><span class="title">Ethics Case Study -- Redlining</span>
 </h2>
-<div class="para" id="ethics-redlining-2">Redlining* was the practice of limiting home mortgage loans to low-income neighborhoods based on factors other than financial qualification: the name comes from maps in which neighborhoods were outlined in red.<div class="autopermalink" data-description="Paragraph"><a href="#ethics-redlining-2" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+<div class="para" id="ethics-redlining-2">
+<dfn class="terminology">Redlining</dfn> was the practice of limiting home mortgage loans to low-income neighborhoods based on factors other than financial qualification: the name comes from maps in which neighborhoods were outlined in red.<div class="autopermalink" data-description="Paragraph"><a href="#ethics-redlining-2" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
 </div>
 <div class="para" id="ethics-redlining-3">While racially motivated redlining was made illegal under the Fair Housing Act in 1968, the effects have lingered. In this activity, we’ll consider some of these effects and how they might be remedied.<div class="autopermalink" data-description="Paragraph"><a href="#ethics-redlining-3" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
 </div>
